# by_tomorrow

./: README.md  pyproject.toml
configs/: paper_data.yaml
notebooks/: arxiv_api_and_llama_parse.ipynb  arxiv_dump.ipynb  make_prof_pages.ipynb
src/bytom/: __init__.py  arxiv_utils.py  author_profiles.py
