[project]
name = "bytom"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
dependencies = [
    "dr-util @ git+https://github.com/drothermel/dr_util.git",
    "feedparser>=6.0.11",
    "llama-index>=0.11.16",
    "llama-index-core>=0.11.16",
    "llama-parse>=0.5.7",
    "llama-index-readers-file>=0.2.2",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab>=4.2.5",
    "jupyterlab-vim>=4.1.4",
    "pytest>=8.3.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bytom"]
