[project]
name = "bytom"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
dependencies = [
    "dr-util @ git+https://github.com/drothermel/dr_util.git",
    "feedparser>=6.0.11",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.3",
    "spacy>=3.8.2",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab>=4.2.5",
    "jupyterlab-vim>=4.1.4",
    "pytest>=8.3.3",
    "polars>=1.9.0",
    "matplotlib>=3.9.2",
    "pip>=24.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bytom"]
